# nimbus-alt

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml
src/: app.rs  config.rs  lib.rs  main.rs  weather_api.rs
src/config/: darksky.rs  darksky_config.rs  mod.rs  owm.rs  owm_config.rs
src/weather_api/: darksky.rs  mod.rs  owm.rs
src/weather_api/darksky/: models.rs
src/weather_api/owm/: models.rs
