[package]
name = "nimbus-alt"
version = "0.1.0"
authors = ["Matthew Klein <mklein994@gmail.com>"]
edition = "2018"

[dependencies]
dirs = "1.0.4"
dotenv = "0.13.0"
env_logger = "0.6"
failure = "0.1.3"
log = "0.4"
reqwest = "0.9.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4.8"
url = "1.7.1"

[features]
# TODO: remove this feature once testing is setup
live = []
