[package]
name = "nimbus-alt"
version = "0.1.0"
authors = ["Matthew Klein <mklein994@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
dirs = "1.0.4"
dotenv = "0.13.0"
env_logger = "0.6.0"
failure = "0.1.3"
log = "0.4.6"
reqwest = "0.9.5"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
strum = "0.11.0"
strum_macros = "0.11.0"
toml = "0.4.9"
url = "1.7.2"
